<resources>
    <string name="app_name">Solitaire</string>
    <string name="play">Jouer</string>
    <string name="replay">Rejouer</string>
    <string name="help">Aide Cases</string>
    <string name="pause">Pause</string>
    <string name="next">Suivant</string>
    <string name="welcome">Bienvenue !</string>
    <string name="letsPlay">A toi de jouer !</string>
    <string name="giveName">Saisir votre nom</string>
    <string name="onglet1">Plateau</string>
    <string name="rang">Rang</string>
    <string name="score">Score</string>
    <string name="chrono">Chrono</string>
    <string name="nom">Nom</string>
    <string name="parfait">Parfait</string>
    <string name="gagne">Gagné</string>
    <string name="error_list_score">Aucun score sauvegardé</string>
    <string name="error_palyer_name">Aucun nom</string>
    <string name="your_name">Votre nom</string>
    <string name="perfect_play">Résultat parfait</string>
    <string name="win_play">Bonne partie, mais tu peux faire mieux ;)</string>
    <string name="lose_play1">Il reste </string>
    <string name="lose_play2"> Billes. Dommage, tu feras mieux la prochaine fois !</string>

</resources>
