<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:orientation="vertical"
    tools:context=".StartSetName">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_weight="3"
        android:text="@string/welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="70sp"></TextView>

    <EditText
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/giveName"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="100dp"
        android:layout_weight="0.25"
        android:background="@drawable/button_roundedbutton"
        android:text="@string/play"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</LinearLayout>