<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/namePlayerPlateau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp"></TextView>

        <TextView
            android:id="@+id/timerPlateau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20sp"></TextView>

    </LinearLayout>


    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"></TextView>

    <GridLayout
        android:id="@+id/plateau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="1dp"
        android:background="@color/colorBack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_roundedbutton"
            android:text="@string/help"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_roundedbutton"
            android:text="@string/pause"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_roundedbutton"
            android:text="@string/replay"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>